its in the lords hands now

--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
 PORT=5000
 FRONTEND_ORIGIN = http://localhost:8080
 
-MONGO_URI=mongodb+srv://iamchisomelijah:AfterSchool22@cluster0.evbhtpd.mongodb.net/after_school?retryWrites=true&w=majority
+MONGO_URI = mongodb+srv://iamchisomelijah:AfterSchool22@cluster0.evbhtpd.mongodb.net/?appName=Cluster0
+
+
