its in the lords hands now

--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
 PORT=5000
-FRONTEND_ORIGIN = http://localhost:8080
 
-MONGO_URI = mongodb+srv://iamchisomelijah:AfterSchool22@cluster0.evbhtpd.mongodb.net/?appName=Cluster0
+MONGO_URI=mongodb+srv://iamchisomelijah:AfterSchool22@cluster0.evbhtpd.mongodb.net/afterSchool?retryWrites=true&w=majority&appName=Cluster0
 
-
+FRONTEND_ORIGIN=https://chisomelijah.github.io
