--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "mongodb": "^6.20.0"
   },
   "devDependencies": {
+    "express-to-postman": "^1.1.3",
     "nodemon": "^3.1.10"
   },
   "engines": {
-  "node": "20.x"
-}
-
+    "node": "20.x"
+  }
 }
